# tmux-llm

./: .gitignore  pyproject.toml
scripts/: reinstall.sh
tmux_llm/: __init__.py  cli.py  configurator.py
