[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tmux-llm"
version = "0.1.0"
description = "Tmux helper that drives an LLM for tmux panes"
requires-python = ">=3.9"
dependencies = [
  "openai>=1.0.0",
  "prompt-toolkit>=3.0.0",
  "loguru>=0.7.2",
  "tomli>=2.0.1; python_version < \"3.11\"",
]

[project.scripts]
tmux-llm = "tmux_llm.cli:main"
tmux-llm-config = "tmux_llm.configurator:cli"

[tool.setuptools.packages.find]
where = ["."]
